[gd_scene load_steps=5 format=3 uid="uid://dvdxsgeabbsu8"]

[ext_resource type="Script" uid="uid://bjyncs2ggomjh" path="res://addons/modal_window/modal_window.gd" id="1_c3s7e"]
[ext_resource type="Texture2D" uid="uid://dxfdolklfyt6f" path="res://addons/modal_window/check_square_color.svg" id="2_d0816"]
[ext_resource type="Texture2D" uid="uid://5sw3c0m3w2e8" path="res://addons/modal_window/icon_outline_cross.svg" id="3_d0816"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7276q"]

[node name="Window" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_c3s7e")

[node name="Background" type="ColorRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6
color = Color(0, 0, 0, 0.415686)

[node name="Window" type="PanelContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -150.0
offset_right = 150.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_7276q")

[node name="NinePatchRect" type="NinePatchRect" parent="Window"]
layout_mode = 2
texture = ExtResource("2_d0816")
patch_margin_left = 7
patch_margin_top = 8
patch_margin_right = 6
patch_margin_bottom = 11
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="MarginContainer" type="MarginContainer" parent="Window"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Window/MarginContainer"]
layout_mode = 2

[node name="Head" type="HBoxContainer" parent="Window/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Title" type="Label" parent="Window/MarginContainer/VBoxContainer/Head"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
horizontal_alignment = 1
vertical_alignment = 1

[node name="BtnClose" type="Button" parent="Window/MarginContainer/VBoxContainer/Head"]
unique_name_in_owner = true
custom_minimum_size = Vector2(26, 26)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_icons/icon = ExtResource("3_d0816")

[node name="ContentContainer" type="MarginContainer" parent="Window/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_top = 10
theme_override_constants/margin_bottom = 10

[node name="Content" type="Label" parent="Window/MarginContainer/VBoxContainer/ContentContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1

[node name="Foot" type="HFlowContainer" parent="Window/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
alignment = 2
last_wrap_alignment = 3

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="gui_input" from="Background" to="." method="_on_background_input"]
